Bug 14540 - talloc_set_memlimit causes all reallocs to fail when used on pools.
Summary: talloc_set_memlimit causes all reallocs to fail when used on pools.
Status: RESOLVED FIXED
Alias: None
Product: TALLOC
Classification: Unclassified
Component: libtalloc (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal
Target Milestone: ---
Assignee: Jeremy Allison
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-20 21:33 UTC by Jeremy Allison
Modified: 2021-02-25 19:16 UTC (History)
1 user (show)

See Also:


Attachments
Add additional debug text to memlimit tests (1.83 KB, patch)
2020-10-21 23:54 UTC, Arran Cudbard-Bell
no flags Details
Add additional test cases for memlimit (4.30 KB, patch)
2020-10-21 23:55 UTC, Arran Cudbard-Bell
no flags Details
Add note in doxygen about how memlimit interacts with pools (1015 bytes, patch)
2020-10-21 23:55 UTC, Arran Cudbard-Bell
no flags Details
git-am fix for master. (13.13 KB, patch)
2020-10-27 21:40 UTC, Jeremy Allison
no flags Details
Updated with sigs files. (18.14 KB, patch)
2020-10-27 21:50 UTC, Jeremy Allison
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy Allison 2020-10-20 21:33:42 UTC
Reported by Arran Cudbard-Bell <a.cudbardb@freeradius.org>.

Patch and regression tests to follow.
Comment 1 Arran Cudbard-Bell 2020-10-21 23:54:23 UTC
Created attachment 16296 [details]
Add additional debug text to memlimit tests
Comment 2 Arran Cudbard-Bell 2020-10-21 23:55:23 UTC
Created attachment 16297 [details]
Add additional test cases for memlimit
Comment 3 Arran Cudbard-Bell 2020-10-21 23:55:50 UTC
Created attachment 16298 [details]
Add note in doxygen about how memlimit interacts with pools
Comment 4 Arran Cudbard-Bell 2020-10-21 23:58:13 UTC
Jeremy, the final patch submitted to samba-technical looks good to me.  I've attached the same patches as I posted.

I think once these are all merged we can considered this bug resolved.
Comment 5 Jeremy Allison 2020-10-22 03:25:35 UTC
Gonna need a little more - the additional test should go in first marked as "knownfail", then the patch that fixes them removes them from the knownfail directory again. I'm working on it..
Comment 7 Jeremy Allison 2020-10-27 21:40:13 UTC
Created attachment 16313 [details]
git-am fix for master.
Comment 8 Jeremy Allison 2020-10-27 21:50:05 UTC
Created attachment 16314 [details]
Updated with sigs files.
Comment 9 Jeremy Allison 2020-10-28 00:19:49 UTC
MR: https://gitlab.com/samba-team/samba/-/merge_requests/1646
Comment 10 Samba QA Contact 2020-11-09 04:11:06 UTC
This bug was referenced in samba master:

86eb6423bdcedf3433f3dbcf026573a238cf0d87
6e0aab0b4038255b2d63e8687924a21d77bace91
30a8bea8a340dcf9a3120f5ee8041e62fb129d8d
4566ee91b8c37f62e8b56242a48230db59cd5ff0
a5052c73c3ffdca6b30194223e69a26430f3f989
Comment 11 Jeremy Allison 2020-11-09 20:24:27 UTC
Not sure if we need to back-port this to 4.13.next, or just leave until 4.14.

Arran, do you have an opinion on this ?
Comment 12 Arran Cudbard-Bell 2020-11-09 20:25:37 UTC
It's not especially urgent as we have a work around, so I'm fine with leaving it until 4.14.